--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -23,7 +23,7 @@
 			  <a class="nav-link" th:href="@{/listar}">Clientes</a>
 			</li>
 		  </ul>
-		  <div class="float-right form-inline my-2 my-lg-0">
+		  <!-- <div class="float-right form-inline my-2 my-lg-0"> -->
 			  <ul class="navbar-nav navbar-right">
 			  	<li sec:authorize="!isAuthenticated()"><a th:href="@{/login}" class="btn btn-outline-primary">Sing in</a></li>
 			  	<div class="dropdown" sec:authorize="isAuthenticated()">
@@ -37,7 +37,23 @@
 			  	  </div>
 			  	</div>
 			  </ul>
-			</div>
+
+			  <ul class="navbar-nav navbar-right">
+			  	<div class="dropdown">
+			  	  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" th:text="#{text.locale.lengua}">
+			  	  </button>
+			  	  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+			  	  	<!-- <ul class="navbar-nav navbar-right mx-4"> -->
+			  	  		<li class="dropdown-item mx-1"><a th:href="@{/locale(lang=es_ES)}" th:text="#{text.locale.es}">ES</a></li>
+			  	  		<li class="dropdown-item mx-1"><a th:href="@{/locale(lang=en_US)}" th:text="#{text.locale.en}">EN</a></li>
+			  	  		<li class="dropdown-item mx-1"><a th:href="@{/locale(lang=de_DE)}" th:text="#{text.locale.de}">DE</a></li>
+			  	  	<!-- </ul> -->
+			  	  </div>
+			  	</div>
+			  </ul>
+				
+			  
+			<!-- </div> -->
 		</div>
 	</nav>
 	
