--- a/src/main/resources/templates/listar.html
+++ b/src/main/resources/templates/listar.html
@@ -18,11 +18,11 @@
 						<thead>
 							<tr>
 								<th sec:authorize="hasRole('ROLE_USER')">Id</th>
-								<th>Nombre</th>
-								<th>Apellido</th>
-								<th>Email</th>
-								<th>Creado</th>
-								<th>Opciones</th>
+								<th th:text="#{text.cliente.nombre}"></th>
+								<th th:text="#{text.cliente.apellido}"></th>
+								<th th:text="#{text.cliente.email}"></th>
+								<th th:text="#{text.cliente.createdAt}"></th>
+								<th th:text="#{text.cliente.opciones}"></th>
 							</tr>
 						</thead>
 						<tbody>
